Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14099

SUSE 15 SP2 aarch64 does not set arch_stackwalk missing print_stack_trace

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      SUSE 15 SP2 aarch64 build CONFIG_ARCH_STACKWALK is not defined and
      print_stack_trace is not available.

      Replace print_stack_trace with an open-coded variant
      using %pB introduced in Linux v2.6.38-6557-g0f77a8d37825

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: